--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,65 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>DevDiary</title>
+  <title>DevDiary 📝</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="/scripts/main.js"></script>
   <link rel="stylesheet" href="/styles.css" />
 </head>
-<body>
-  <h1>DevDiary Blog</h1>
+<body class="light">
 
+  <header>
+    <h1>DevDiary 📝</h1>
+    <button id="theme-toggle">🌓</button>
+    <button id="logout-button" style="display: none;">Logout</button>
+  </header>
+
+  <!-- 🔐 Login Section -->
+  <section id="login-section">
+    <h2>Login</h2>
+    <form id="login-form">
+      <input type="text" id="login-username" placeholder="Username" required />
+      <input type="password" id="login-password" placeholder="Password" required />
+      <button type="submit">Login</button>
+    </form>
+    <p id="login-msg" class="error"></p>
+  </section>
+
+  <!-- 📝 Create/Edit Post Section -->
+  <section id="create-post" style="display: none;">
+    <h2 id="form-heading">Create Post</h2>
+    <form id="post-form">
+      <input type="text" id="title" placeholder="Post Slug (no spaces)" required />
+      <textarea id="content" placeholder="Write your markdown..." rows="10"></textarea>
+      <button type="submit">Save Post</button>
+    </form>
+    <p id="form-msg" class="error"></p>
+    <h3>Preview</h3>
+    <div id="markdown-preview" class="preview-box"></div>
+  </section>
+
+  <!-- 📬 Posts List -->
   <section id="posts-list">
     <h2>All Posts</h2>
+    <input type="text" id="search-input" placeholder="Search..." />
     <ul id="posts"></ul>
   </section>
 
-  <section id="post-view" style="display:none;">
-    <button id="back-button">← Back to Posts</button>
+  <!-- 📖 Post View -->
+  <section id="post-view" style="display: none;">
+    <button id="back-button">← Back</button>
+    <button id="edit-button">✏️ Edit</button>
     <div id="post-content"></div>
   </section>
 
-  <script src="/script.js"></script>
+  <!-- 🧩 Optional Templates (for JS usage) -->
+  <template id="post-template">
+    <section id="post-view">
+      <button id="back-button">← Back</button>
+      <button id="edit-button">✏️ Edit</button>
+      <div id="post-content"></div>
+    </section>
+  </template>
+
 </body>
 </html>
