--- a/public/index.html
+++ b/public/index.html
@@ -1,66 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>DevDiary 📝</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="/scripts/main.js"></script>
-  <link rel="stylesheet" href="/styles.css" />
-</head>
-<body class="light">
+    <head>
+        <meta charset="UTF-8" />
+        <title>DevDiary 📝</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/styles.css" />
+    </head>
+    <body class="light">
+        <!-- 🟡 Status Indicators -->
+        <div id="loading-indicator" class="hidden">⏳ Loading...</div>
+        <div id="success-msg" class="hidden"></div>
+        <div id="error-msg" class="hidden"></div>
 
-  <header>
-    <h1>DevDiary 📝</h1>
-    <button id="theme-toggle">🌓</button>
-    <button id="logout-button" style="display: none;">Logout</button>
-  </header>
+        <!-- 🔐 Login Section -->
+        <section id="login-section">
+            <h2>Login</h2>
+            <form id="login-form">
+                <input id="login-username" placeholder="Username" required />
+                <input
+                    id="login-password"
+                    type="password"
+                    placeholder="Password"
+                    required
+                />
+                <button type="submit">Login</button>
+                <div id="login-msg"></div>
+            </form>
+        </section>
 
-  <!-- 🔐 Login Section -->
-  <section id="login-section">
-    <h2>Login</h2>
-    <form id="login-form">
-      <input type="text" id="login-username" placeholder="Username" required />
-      <input type="password" id="login-password" placeholder="Password" required />
-      <button type="submit">Login</button>
-    </form>
-    <p id="login-msg" class="error"></p>
-  </section>
+        <!-- 📋 Main App UI -->
+        <section id="app-ui" class="hidden">
+            <div style="margin-bottom: 1em">
+                <button id="logout-button">Logout</button>
+                <button id="new-post-btn">+ New Post</button>
+                <button id="theme-toggle">🌓 Toggle Theme</button>
+            </div>
 
-  <!-- 📝 Create/Edit Post Section -->
-  <section id="create-post" style="display: none;">
-    <h2 id="form-heading">Create Post</h2>
-    <form id="post-form">
-      <input type="text" id="title" placeholder="Post Slug (no spaces)" required />
-      <textarea id="content" placeholder="Write your markdown..." rows="10"></textarea>
-      <button type="submit">Save Post</button>
-    </form>
-    <p id="form-msg" class="error"></p>
-    <h3>Preview</h3>
-    <div id="markdown-preview" class="preview-box"></div>
-  </section>
+            <!-- 📄 All Posts List -->
+            <div id="posts-list">
+                <h2>All Posts</h2>
+                <input
+                    type="text"
+                    id="search-input"
+                    placeholder="🔍 Search by title/content..."
+                />
+                <ul id="posts"></ul>
+            </div>
 
-  <!-- 📬 Posts List -->
-  <section id="posts-list">
-    <h2>All Posts</h2>
-    <input type="text" id="search-input" placeholder="Search..." />
-    <ul id="posts"></ul>
-  </section>
+            <!-- 👁️ Post View -->
+            <div id="post-view" class="hidden">
+                <button id="back-button">← Back</button>
+                <div id="post-content"></div>
+                <button id="edit-button">✏️ Edit</button>
+            </div>
 
-  <!-- 📖 Post View -->
-  <section id="post-view" style="display: none;">
-    <button id="back-button">← Back</button>
-    <button id="edit-button">✏️ Edit</button>
-    <div id="post-content"></div>
-  </section>
+            <!-- 📝 Create/Edit Form -->
+            <div id="create-post" class="hidden">
+                <h2>Create/Edit Post</h2>
+                <form id="post-form">
+                    <input id="title" placeholder="Post Title" required />
+                    <textarea
+                        id="content"
+                        placeholder="Write Markdown content..."
+                        required
+                    ></textarea>
+                    <div id="markdown-preview"></div>
+                    <div id="form-msg"></div>
+                    <button type="submit">💾 Save Post</button>
+                    <button type="button" id="cancel-create">Cancel</button>
+                </form>
+            </div>
+        </section>
 
-  <!-- 🧩 Optional Templates (for JS usage) -->
-  <template id="post-template">
-    <section id="post-view">
-      <button id="back-button">← Back</button>
-      <button id="edit-button">✏️ Edit</button>
-      <div id="post-content"></div>
-    </section>
-  </template>
-
-</body>
+        <!-- 📜 Scripts -->
+        <script type="module" src="/scripts/main.js"></script>
+    </body>
 </html>
