Dev Diary - auth changes and added test coverage

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,12 @@
         <section id="login-section">
             <h2>Login</h2>
             <form id="login-form">
-                <input id="login-username" placeholder="Username" required />
+                <input
+                    type="text"
+                    id="login-username"
+                    placeholder="Username"
+                    required
+                />
                 <input
                     id="login-password"
                     type="password"
